fix scroll visible event

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -298,3 +298,7 @@ table{
   border-collapse: collapse;
   width: 100%;
 }
+
+.scrollbar-thumb {
+  background: var(--color-black-100)!important;
+}
